# Obj_3

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.h  header.h  includes.h  kursiokai.txt  kursiokai10.txt  kursiokai100.txt  kursiokai1000.txt  kursiokai10000.txt  makefile  menu.cpp  readFromFile.cpp  readFromFile.h  readFromUser.cpp  readFromUser.h  source_masyvai.cpp  source_vektoriai.cpp  speedTests.cpp  speedTests.h
classes/Human/: Human.h
classes/Student/: Student.cpp  Student.h
classes/Timer/: Timer.h
doxygen/: Doxyfile
doxygen/html/: _human_8cpp.html  _human_8h.html  _human_8h_source.html  _r_e_a_d_m_e_8md.html  _student_8cpp.html  _student_8cpp.js  _student_8h.html  _student_8h.js  _student_8h_source.html  _timer_8h.html  _timer_8h_source.html  annotated.html  annotated_dup.js  class_human-members.html  class_human.html  class_human.js  class_student-members.html  class_student.html  class_student.js  class_timer-members.html  class_timer.html  class_timer.js  classes.html  dir_72e24501fb5b0645b9b8daa01ffca707.html  dir_72e24501fb5b0645b9b8daa01ffca707.js  dir_b02e4219757ae4e3a0f1714873865bbf.html  dir_b02e4219757ae4e3a0f1714873865bbf.js  dir_cead102c96928677982a78023beba250.html  dir_cead102c96928677982a78023beba250.js  dir_fc6d4356f48bed429a6e654db29cc665.html  dir_fc6d4356f48bed429a6e654db29cc665.js  files.html  files_dup.js  functions.html  functions_8cpp.html  functions_8cpp.js  functions_8h.html  functions_8h.js  functions_8h_source.html  functions_func.html  (+22 more)
doxygen/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_1.js  files_5.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_1.js
obj_masyvai/: CMakeLists.txt  source_masyvai.cpp
src/: CMakeLists.txt  functions.cpp  includes.h  kursiokai.txt  kursiokai1000.txt  kursiokai10000.txt  menu.cpp  menu.h  source_masyvai.cpp  source_vektoriai.cpp
src/classes/Human/: Human.cpp  Human.h
src/classes/Student/: Student.cpp  Student.h
tests/: CMakeLists.txt
tests/StudentsTests/: CMakeLists.txt  stud_test.cpp
tests/lib/googletest-release-1.8.1/googletest/src/: gtest.cc
